<resources>
    <string name="app_name">Basketball Scorekeeper</string>
    <string name="team_1">Los Angeles Lakers</string>
    <string name="team_2">Chicago Bulls</string>
    <string name="VS">VS</string>
    <string name="team_1_score">0</string>
    <string name="team_2_score">0</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="reset">Reset</string>
    <string name="_1_point">1 Point</string>
    <string name="_2_points">2 Points</string>
    <string name="_3_points">3 Points</string>
    <string name="team_select"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>